tests/suite/fail/borrow/use_after_move.ny
fn main() {
    let a = "hello"
    let b = a
    print(a) //~ ERROR was moved
}
